2011-09-20  Rhys Ulerich  <rhys.ulerich@gmail.com>

	* bspline.c (gsl_bspline_greville_abscissa) Greville-related
	logic moved to greville.c in preparation for upcoming
	gsl_bspline_knots_greville_abscissae functionality.

2009-08-12  Brian Gough  <bjg@network-theory.co.uk>

	* bspline.c (gsl_bspline_alloc): correct free to gsl_vector_free
	for components allocated with gsl_vector_alloc
	(gsl_bspline_deriv_alloc): correct free to gsl_matrix_free
	for components allocated with gsl_matrix_alloc

2009-07-21  Brian Gough  <bjg@network-theory.co.uk>

	* bspline.c (gsl_bspline_greville_abscissa): added function for
	greville abscissae

2009-07-09  Brian Gough  <bjg@network-theory.co.uk>

	* bspline.c (gsl_bspline_free): handle NULL argument in free
	(gsl_bspline_deriv_free): handle NULL argument in free

2008-12-09  Brian Gough  <bjg@network-theory.co.uk>

	* bspline.c (gsl_bspline_deriv_alloc): add size to derivative
	struct

2008-12-08  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_bspline.h: preserve binary compatibility in workspaces

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

2006-11-02  Brian Gough  <bjg@network-theory.co.uk>

	* added test program 

	* initial checkin from P.Alken
	
