@@ -19,9 +19,12 @@
  */
 
 #include <config.h>
-#include <gsl/gsl_errno.h>
 #include <gsl/gsl_bspline.h>
+#include <gsl/gsl_errno.h>
+#include <gsl/gsl_linalg.h>
+#include <gsl/gsl_matrix.h>
 #include <gsl/gsl_statistics.h>
+#include <gsl/gsl_vector.h>
 
 /* Return the location of the i-th Greville abscissa */
 double
@@ -45,4 +48,96 @@ gsl_bspline_greville_abscissa(size_t i, gsl_bspline_workspace *w)
     }
 
   return gsl_stats_mean(data, stride, km1);
+}
+
+int
+gsl_bspline_knots_greville(const gsl_vector *abscissae,
+                           gsl_bspline_workspace *w)
+{
+  int s = GSL_SUCCESS;
+  size_t i, j;
+
+  /* Constants derived from the B-spline workspace and abscissae details */
+  const size_t km2    = w->k - 2;
+  const size_t nbreak = abscissae->size - km2;
+  const size_t M      = abscissae->size - 2;
+  const size_t N      = nbreak - 2;
+  const double invkm1 = 1.0 / w->km1;
+
+  /* Working storage and logical views of portions of that storage */
+  double *storage = NULL;
+  gsl_matrix_view A;
+  gsl_vector_view tau, b, x, r, brk;
+
+  /* Check incoming arguments and workspace satisfy algorithmic assumptions */
+  if (w->k < 2)
+    {
+      GSL_ERROR ("w->k must be at least 2", GSL_EINVAL);
+    }
+  else if (abscissae->size < 2)
+    {
+      GSL_ERROR ("abscissae->size must be at least 2", GSL_EINVAL);
+    }
+  else if (nbreak != w->nbreak)
+    {
+      GSL_ERROR ("w->nbreak must equal abscissae->size - k + 2", GSL_EINVAL);
+    }
+
+  /* Allocate working storage and divide it into multiple, zero-filled views */
+  storage = (double *) calloc (M*N + 2*N + 2*M, sizeof(double));
+  if (storage == 0)
+    {
+      GSL_ERROR ("failed to allocate working storage", GSL_ENOMEM);
+    }
+  A   = gsl_matrix_view_array (storage, M, N);
+  tau = gsl_vector_view_array (storage + M*N,             N);
+  b   = gsl_vector_view_array (storage + M*N + N,         M);
+  x   = gsl_vector_view_array (storage + M*N + N + M,     N);
+  r   = gsl_vector_view_array (storage + M*N + N + M + N, M);
+  brk = gsl_vector_view_array (storage + M*N + N + M - 1, nbreak); /* Alias! */
+
+  /* Build matrix taking interior breakpoints to interior Greville abscissae */
+  /* Only interior needed as first/last breakpoint is first/last abscissae */
+  for (j = 0; j < N; ++j)
+    for (i = 0; i <= km2; ++i)
+      gsl_matrix_set (&A.matrix, i+j, j, invkm1);
+
+  /* Copy interior collocation points from abscissae into b */
+  for (i = 0; i < M; ++i)
+    gsl_vector_set (&b.vector, i, gsl_vector_get (abscissae, i+1));
+
+  /* First/last collocation point fixes first/last breakpoint.  Constrain. */
+  /* First constraint column omitted from A was 1, 1 - invkm1, ..., invkm1. */
+  /* Last constraint column omitted from A is invmk1, 2*invkm1, ..., 1. */
+  for (i = 0; i < km2; ++i)
+    {
+      double * const v = gsl_vector_ptr (&b.vector, i);
+      *v -= (1 - (i+1)*invkm1) * gsl_vector_get (abscissae, 0);
+    }
+  for (i = 0; i < km2; ++i)
+    {
+      double * const v = gsl_vector_ptr (&b.vector, M - km2 + i);
+      *v -= (i+1)*invkm1 * gsl_vector_get (abscissae, abscissae->size - 1);
+    }
+
+  /* Solve linear least squares problem to determine interior breakpoints */
+  s =  gsl_linalg_QR_decomp (&A.matrix, &tau.vector)
+    || gsl_linalg_QR_lssolve (&A.matrix, &tau.vector,
+                              &b.vector, &x.vector, &r.vector);
+  if (s)
+    {
+      free (storage);
+      return s;
+    }
+
+  /* Wrap the least squares solution "x" with first/last breakpoint as "brk" */
+  gsl_vector_set(&brk.vector, 0,
+                 gsl_vector_get(abscissae, 0));
+  gsl_vector_set(&brk.vector, nbreak - 1,
+                 gsl_vector_get(abscissae, abscissae->size - 1));
+
+  /* Finally, initialize a knot vector based on the breakpoints solution */
+  s = gsl_bspline_knots(&brk.vector, w);
+  free(storage);
+  return s;
 }
