@@ -77,6 +77,10 @@ int gsl_bspline_knots_uniform(const double a, const double b,
                               gsl_bspline_workspace *w);
 
 int
+gsl_bspline_knots_greville(const gsl_vector *abscissae,
+                           gsl_bspline_workspace *w);
+
+int
 gsl_bspline_eval(const double x, gsl_vector *B, 
                  gsl_bspline_workspace *w);
 
